h1. Release Notes for Sirius

{toc:style=disc|minLevel=2|maxLevel=3}

This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.

h2(#sirius7.3.0). Changes in Sirius 7.3.0

h3. User-Visible Changes

* <span class="label label-success">Added</span> A new preference has been added in the Sirius Diagram preference page. This preference allows the user to choose the arrangement of elements created on a diagram when they are not directly positioned by the user. In the preference page, users can choose between a diagonal, vertical or horizontal arrangement.

h3. Specifier-Visible Changes

h3. Developer-Visible Changes

h4. Changes in @org.eclipse.sirius.diagram.ui@

* <span class="label label-info">Modified</span> The methods @org.eclipse.sirius.diagram.ui.tools.api.util.GMFNotationHelper.getNotes(Diagram)@ and @org.eclipse.sirius.diagram.ui.tools.api.util.GMFNotationHelper.getTextNotes(Diagram)@ now return a list of @org.eclipse.gmf.runtime.notation.Shape@ instead of a list of @org.eclipse.gmf.runtime.notation.Node@. This type is more precise and avoids multiple cast when using the returned list.
* <span class="label label-success">Added</span> A new preference have been added in  @org.eclipse.sirius.diagram.ui.tools.api.preferences.SiriusDiagramUiPreferencesKeys@:
** @PREF_NEWLY_CREATED_ELEMENTS_LAYOUT@: An integer preference used to define the arrangement of elements created on a diagram when they are not directly positioned by the user. When created successively, elements can be positioned diagonally, vertically or horizontally. Elements can be positioned diagonally with the value 0, vertically with the value 1, horizontally with the value 2. By default, elements are positioned diagonally with the value 0.

The Sirius default values for these preferences can be overridden for a specific product. For example:

bc. 