@@ -11,8 +11,34 @@
 		<p>This document lists the changes in 
 			<code>TranslatableMessage</code> used for Sirius internationalization in each Sirius version.
 		</p>
-		<h2 id="sirius707">Translation Keys Changes in Sirius 7.0.7 (from Sirius 7.0.6)</h2>
+		<h2 id="sirius740">Translation Keys Changes in Sirius 7.4.0 (from Sirius 7.3.0)</h2>
+		<h2 id="sirius730">Translation Keys Changes in Sirius 7.3.0 (from Sirius 7.2.1)</h2>
 		<h3 id="MessageKeysAdded">Message Keys Added</h3>
+		<ul>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.DiagramGeneralPreferencePage_newlyCreatedElementsGroupLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.NewlyCreatedElements_diagonalLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.NewlyCreatedElements_diagonalTooltip</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.NewlyCreatedElements_horizontalLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.NewlyCreatedElements_horizontalTooltip</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.NewlyCreatedElements_verticalLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.NewlyCreatedElements_verticalTooltip</code>
+			</li>
+		</ul>
+		<h2 id="sirius707">Translation Keys Changes in Sirius 7.0.7 (from Sirius 7.0.6)</h2>
+		<h3 id="MessageKeysAdded2">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.tree.ui.provider.Messages.AbstractDTreeItemRunnableWithProgress_emptyDTreeItemsParameter</code>
@@ -40,7 +66,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius702">Translation Keys Changes in Sirius 7.0.2 (from Sirius 7.0.1)</h2>
-		<h3 id="MessageKeysAdded2">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded3">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.ChangeMassivelyImagePathDialog_newLabel</code>
@@ -77,7 +103,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius701">Translation Keys Changes in Sirius 7.0.1 (from Sirius 7.0.0)</h2>
-		<h3 id="MessageKeysAdded3">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded4">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.SVGImageRegistry_LoadImageError</code>
@@ -135,7 +161,7 @@
 				</ul>
 			</li>
 		</ul>
-		<h3 id="MessageKeysAdded4">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded5">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.viewpoint.provider.Messages.AnalysisSelectorFilteredItemsSelectionDialog_labelProviderLocal</code>
@@ -202,7 +228,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius660">Translation Keys Changes in Sirius 6.6.0 (from Sirius 6.5.0)</h2>
-		<h3 id="MessageKeysAdded5">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded6">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.sequence.ui.Messages.SequenceEMFCommandFactory_notSupportedZorderCommandsMessage</code>
@@ -252,7 +278,7 @@
 		</ul>
 		<h3 id="MessageKeysRemoved3">Message Keys Removed</h3>
 		<h2 id="sirius650">Translation Keys Changes in Sirius 6.5.0 (from Sirius 6.4.0)</h2>
-		<h3 id="MessageKeysAdded6">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded7">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.RepairEdgesWithOneBendpointMigrationParticipant_edgesModified</code>
@@ -436,7 +462,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius640">Translation Keys Changes in Sirius 6.4.0 (from Sirius 6.3.2)</h2>
-		<h3 id="MessageKeysAdded7">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded8">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.DDiagramEditorImpl_error_representationRefresh</code>
@@ -563,14 +589,14 @@
 			</li>
 		</ul>
 		<h2 id="sirius632">Translation Keys Changes in Sirius 6.3.2 (from Sirius 6.3.1)</h2>
-		<h3 id="MessageKeysAdded8">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded9">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.viewpoint.Messages.DRepresentationDescriptorQuery_representationError</code>
 			</li>
 		</ul>
 		<h2 id="sirius631">Translation Keys Changes in Sirius 6.3.1 (from Sirius 6.3.0)</h2>
-		<h3 id="MessageKeysAdded9">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded10">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.BundledImageShape_idMissing</code>
@@ -601,7 +627,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius61">Translation Keys Changes in Sirius 6.1 (from Sirius 6.0)</h2>
-		<h3 id="MessageKeysAdded10">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded11">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.common.ui.Messages.MigrationUIUtil_askToSaveChanges</code>
@@ -740,7 +766,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius60">Translation Keys Changes in Sirius 6.0 (from Sirius 5.1)</h2>
-		<h3 id="MessageKeysAdded11">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded12">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.DiagramGeneralPreferencePage_sizeGroupLabel</code>
@@ -954,7 +980,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius51">Translation Keys Changes in Sirius 5.1 (from Sirius 5.0)</h2>
-		<h3 id="MessageKeysAdded12">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded13">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.sequence.Messages.Range_wrongArgument</code>
@@ -1120,7 +1146,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius50">Translation Keys Changes in Sirius 5.0 (from Sirius 4.1)</h2>
-		<h3 id="MessageKeysAdded13">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded14">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.common.acceleo.aql.business.Messages.AQLInterpreter_errorWithExpression</code>
